--- a/kubernetes/1-storage.yaml
+++ b/kubernetes/1-storage.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     type: local
 spec:
+  storageClassName: local
   capacity:
     storage: 50Gi
   accessModes:
@@ -17,6 +18,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: wp-pvc
 spec:
+  storageClassName: local
   resources:
     requests:
       storage: 50Gi
