changes in kubernetes files

--- a/kubernetes/1-storage.yaml
+++ b/kubernetes/1-storage.yaml
@@ -7,11 +7,11 @@ metadata:
 spec:
   storageClassName: local
   capacity:
-    storage: 50Gi
+    storage: 9Gi
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/mnt/data"
+    path: "/mnt/kubernetes-test-volume"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,7 +21,7 @@ spec:
   storageClassName: local
   resources:
     requests:
-      storage: 50Gi
+      storage: 9Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
