--- a/kubernetes/3-service.yaml
+++ b/kubernetes/3-service.yaml
@@ -26,10 +26,46 @@ kind: Service
 metadata:
   name: ols-svc-http
 spec:
+  type: NodePort
   selector:
     app: ols-deployment
   ports:
   - port: 7080
     targetPort: 7080
-
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ols-svc-https
+spec:
+  type: NodePort
+  selector:
+    app: ols-deployment
+  ports:
+  - port: 443
+    targetPort: 443
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ols-svc-https-udp
+spec:
+  type: NodePort
+  selector:
+    app: ols-deployment
+  ports:
+  - port: 443
+    targetPort: 443
+    protocol: UDP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ols-svc-http-default
+spec:
+  type: NodePort
+  selector:
+    app: ols-deployment
+  ports:
+  - port: 80
+    targetPort: 80
